# isotree

./: .Rbuildignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  README.md  cmake_uninstall.cmake.in  configure  configure.ac  isotree.pc.in  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py
R/: RcppExports.R  helpers.R  isoforest.R  legacy.R
docs/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
docs/source/: isotree.rst  modules.rst
example/: an_introduction_to_isolation_forests.ipynb  comparison_model_quality.ipynb  comparison_model_quality_h2o.ipynb  isotree_c_ex.c  isotree_cpp_ex.cpp  isotree_cpp_oop_ex.cpp  isotree_example.ipynb  isotree_impute.ipynb  isotree_svm_kernel_example.ipynb  shap_example.ipynb  treelite_example.ipynb
gen_tables/: gen_tables.c
include/: isotree.hpp  isotree_c.h  isotree_oop.hpp
inst/: COPYRIGHTS
inst/doc/: An_Introduction_to_Isolation_Forests.html
isotree/: __init__.py  cpp_interface.pyx
man/: add.isolation.tree.Rd  add_isolation_tree.Rd  append.trees.Rd  deepcopy.isotree.Rd  export.isotree.model.Rd  get.num.nodes.Rd  isolation.forest.Rd  isotree.add.tree.Rd  isotree.append.trees.Rd  isotree.build.indexer.Rd  isotree.deep.copy.Rd  isotree.drop.imputer.Rd  isotree.drop.indexer.Rd  isotree.drop.reference.points.Rd  isotree.export.model.Rd  isotree.get.num.nodes.Rd  isotree.import.model.Rd  isotree.is.same.Rd  isotree.plot.tree.Rd  isotree.restore.handle.Rd  isotree.set.nthreads.Rd  isotree.set.reference.points.Rd  isotree.subset.trees.Rd  isotree.to.graphviz.Rd  isotree.to.json.Rd  isotree.to.sql.Rd  length.isolation_forest.Rd  load.isotree.model.Rd  predict.isolation_forest.Rd  print.isolation_forest.Rd  summary.isolation_forest.Rd  unpack.after.serialize.Rd  unpack.isolation.forest.Rd  variable.names.isolation_forest.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  Rwrapper.cpp  c_interface.cpp  crit.cpp  crit.hpp  dealloc.cpp  digamma.hpp  dist.cpp  dist.hpp  exp_depth_table.hpp  extended.cpp  extended.hpp  external_facing_generic.hpp  fit_model.cpp  fit_model.hpp  formatted_exporters.cpp  headers_joined.hpp  helpers_iforest.cpp  helpers_iforest.hpp  impute.cpp  impute.hpp  indexer.cpp  instantiate_model.cpp  instantiate_model.hpp  instantiate_template_headers.cpp  instantiate_template_headers.hpp  isoforest.cpp  isoforest.hpp  isotree-win.def  isotree.hpp  isotree_exportable.hpp  merge_models.cpp  model_joined.hpp  mult.cpp  mult.hpp  oop_interface.cpp  oop_interface.hpp  (+12 more)
timings/: README.md  timings_R.Rmd  timings_R.html  timings_R_h2o.Rmd  timings_R_h2o.html  timings_python.ipynb  timings_python_h2o.ipynb
vignettes/: An_Introduction_to_Isolation_Forests.Rmd
